# freeDiameter

./: Dockerfile  README
extensions/: meson.build
extensions/test_app/: meson.build
freeDiameterd/: CMakeLists.txt
libfdcore/: CMakeLists.txt
